--- a/index.html
+++ b/index.html
@@ -1,88 +1,179 @@
 <!DOCTYPE html>
-<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en" > <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
+<!--[if IE 8]> 				 
+<html class="no-js lt-ie9" lang="en" > <![endif]-->
+<!--[if gt IE 8]><!--> 
+<html class="no-js" lang="en"> <!--<![endif]-->
 
 <head>
 	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Foundation 4</title>
+	<meta name="viewport" content="width=device-width">
+	<title>SimpleFile</title>
 
-  
+  <link rel="stylesheet" href="css/style.css">
+
   <link rel="stylesheet" href="css/foundation.css">
   
 
   <script src="js/vendor/custom.modernizr.js"></script>
-
+<!--   // <script src="js/less-1.3.3.min.js" type="text/javascript"></script>
+ -->
 </head>
+
 <body>
+
+<section id="home">
 
 	<div class="row">
 		<div class="large-12 columns">
-			<h2>Welcome to Foundation</h2>
-			<p>This is version 4.3.2.</p>
-			<hr />
+			<h1>SimpleFile</h1>
+			<h4 id="phone" class="right">Contact Us: 1-800-888-8888</h4>
+			<h3 class="subheader">Your taxes, made easy.</h3>
+			
+
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="large-8 columns">
-			<h3>The Grid</h3>
+		<div class="shade" class="large-6 columns"></div>
+		<div id="form" class="large-6 columns">
+		<fieldset>
+			<legend class="inverse">Get Started</legend>
+		
+			<form data-abide class="custom">
+				<div class="large-12 columns question">
+					<h5 class="subheader">Are you married?</h5>
+				<div class="switch small large-2 columns">
+					  <input id="x" name="switch-x" type="radio" checked>
+					  <label for="x" onclick="">No</label>
 
-			<!-- Grid Example -->
-			<div class="row">
-				<div class="large-12 columns">
-					<div class="panel">
-						<p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-6 columns">
-					<div class="panel">
-						<p>Six columns</p>
-					</div>
-				</div>
-				<div class="large-6 columns">
-					<div class="panel">
-						<p>Six columns</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-4 columns">
-					<div class="panel">
-						<p>Four columns</p>
-					</div>
-				</div>
-				<div class="large-4 columns">
-					<div class="panel">
-						<p>Four columns</p>
-					</div>
-				</div>
-				<div class="large-4 columns">
-					<div class="panel">
-						<p>Four columns</p>
-					</div>
-				</div>
-			</div>
+					  <input id="x1" name="switch-x" type="radio">
+					  <label for="x1" onclick="">Yes</label>
 
-			<h3>Buttons</h3>
+					  <span></span>
+				</div>
+				</div>
+			<!-- </form>	
+			<form class="custom"> -->
+					<div class="large-12 columns question">
+					<h5 class="subheader">How many homes do you own?</h5>
+					<!-- <label class="ask vertCenter" for="customDropdown1">How many homes do you own?</label> -->
+					<select class="answer" id="customDropdown1" class="large-2 columns" required>
+						<option>0</option>
+						<option>1</option>
+						<option>2</option>
+						<option>3+</option>
+					</select>
+				</div>
+			<!-- </form>
+			<form class="custom"> -->
+				<div class="large-12 columns question">
+				<h5 class="subheader">Do you earn income in more than one state?</h5>
+					<!-- <label class="ask">Did you earn income in more than one state?</label> -->
+				<div class="switch small large-2 columns">
+					<input id="x" name="switch-x" type="radio" checked>
+					<label for="x" onclick="">No</label>
 
-      <div class="row">
-        <div class="large-6 columns">
-          <p><a href="#" class="small button">Small Button</a></p>
-          <p><a href="#" class="button">Medium Button</a></p>
-          <p><a href="#" class="large button">Large Button</a></p>
-        </div>
-        <div class="large-6 columns">
-          <p><a href="#" class="small alert button">Small Alert Button</a></p>
-          <p><a href="#" class="success button">Medium Success Button</a></p>
-          <p><a href="#" class="large secondary button">Large Secondary Button</a></p>
-        </div>
-      </div>
+					<input id="x1" name="switch-x" type="radio">
+					<label for="x1" onclick="">Yes</label>
+
+					<span></span>
+				</div>
+					<!-- <label class="answer" for="radio1"><input name="radio1" type="radio" id="radio1" style="display:none;" CHECKED><span class="custom radio checked"></span>No </label>
+					<label class="answer" for="radio1"><input name="radio1" type="radio" id="radio1" style="display:none;"><span class="custom radio"></span>Yes </label> -->
+				</div>
+			<!-- </form>
+			<form class="custom"> -->
+				<div class="large-12 columns question">
+				<h5 class="subheader">Do you have any investment income?</h5>
+					<!-- <label class="ask">Do you have any investment income?</label> -->
+				<div class="switch small large-2 columns">
+					<input id="x" name="switch-x" type="radio" checked>
+					<label for="x" onclick="">No</label>
+
+					<input id="x1" name="switch-x" type="radio">
+					<label for="x1" onclick="">Yes</label>
+
+					<span></span>
+				</div>
+					<!-- <label class="answer" for="radio1"><input name="radio1" type="radio" id="radio1" style="display:none;" CHECKED><span class="custom radio checked"></span>No </label>
+					<label class="answer" for="radio1"><input name="radio1" type="radio" id="radio1" style="display:none;"><span class="custom radio"></span>Yes </label> -->
+				</div>
+			
+				<p><a href="http://simplefile.dev/signup.html" class="success button">Get my free quote</a></p>
+			</fieldset>
+			</form>
+
 		</div>
+	</div>
+</section>
 
-		<div class="large-4 columns">
+<section id="details">
+
+<div class="row large-10 large-centered columns">
+
+<!-- <ul class=" panel small-block-grid-2 large-block-grid-4"> -->
+<div class=" large-4 columns">
+<h3>100% Certified </br> Public Accounts</h3>
+<p>Our accountants are all educated and based in the US and have worked for the big three US accounting firms.</p>
+</div>
+
+<div class=" large-4 columns">
+<h3>No Hidden Fees</h3> 
+<p>The price you are quoted is what you pay. If it takes us longer to do your return than we initially estimated, we pick up the additional costs.</p>
+</div>
+
+
+<div class=" large-4 columns">
+<h3>Zero hassle</h3>
+<p>Send us your tax forms and we prepare and file your return for you. The most complex software you will use is email to communicate with your dedicated CPA.</p>
+</div>
+</div>
+
+<div class="panel large-6 columns large-centered callout">
+<h3>Satisfaction guaranteed.</h3> 
+<p>We stand by our work, if for any reason you are unsatisfied we offer a full refund, no questions asked.</p>
+</div>
+
+
+</section>
+<footer>
+	<hr>
+	<h6 class="left subheader"> &copy 2013 SimpleFile LLC</h6>
+</footer>
+			<!-- <div class="row">
+				<div class="large-6 columns">
+					<div class="panel">
+						<p>Six columns</p>
+					</div>
+				</div>
+				<div class="large-6 columns">
+					<div class="panel">
+						<p>Six columns</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-4 columns">
+					<div class="panel">
+						<p>Four columns</p>
+					</div>
+				</div>
+				<div class="large-4 columns">
+					<div class="panel">
+						<p>Four columns</p>
+					</div>
+				</div>
+				<div class="large-4 columns">
+					<div class="panel">
+						<p>Four columns</p>
+					</div>
+				</div>
+			</div> -->
+
+		
+    
+
+		<!-- <div class="large-4 columns">
 			<h4>Getting Started</h4>
 			<p>We're stoked you want to try Foundation! To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
 
@@ -94,7 +185,7 @@
 				<li><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</li>
 			</ul>
 		</div>
-	</div>
+	</div> -->
 
   <script>
   document.write('<script src=' +
