--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
 	<div class="row">
 	<form class="large-6 columns">
 		<fieldset>
-			<legend class="inverse">Sign Up</legend>
+			<legend>Sign Up</legend>
 
 			<div class="row">
 				<div class="large-12 columns">
