fix form switches

--- a/signup.html
+++ b/signup.html
@@ -39,21 +39,36 @@
 				<div class="large-12 columns">
 					<input type="text" placeholder="Liz Lemon">
 				</div>
-
 			</div>
+
 			<div class="row">
 				<div class="large-12 columns">
 					<input type="email" placeholder="me@lizlemon.com">
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="large-12 columns">
-					<input type="tel" placeholder="222-222-2222">
+					<input type="alpha_numeric" placeholder="222 Broadway">
+				</div>
+				<div class="large-12 columns">
+					<input type="alpha_numeric" placeholder="20th Floor">
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="large-12 columns">
+					<input type="alpha" placeholder="New York, NY">
 				</div>
 			</div>
 			<div class="row">
 				<div class="large-12 columns">
-					<textarea placeholder="Anything else we should know?"></textarea>
+						<input type="card" placeholder="card number">
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-12 columns">
+						<input type="ccv" placeholder="ccv">
 				</div>
 			</div>
 
