--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 				<div class="large-12 columns question">
 					<h5 class="subheader">Are you married?</h5>
 				<div class="switch small large-2 columns">
-					  <input id="x" name="switch-x" type="radio" checked>
-					  <label for="x" onclick="">No</label>
+					  <input id="q1" name="q1" type="radio" checked>
+					  <label for="q1" onclick="">No</label>
 
-					  <input id="x1" name="switch-x" type="radio">
-					  <label for="x1" onclick="">Yes</label>
+					  <input id="q1" name="switch-x" type="radio">
+					  <label for="q1" onclick="">Yes</label>
 
 					  <span></span>
 				</div>
@@ -80,11 +80,11 @@
 				<h5 class="subheader">Do you own your home?</h5>
 					<!-- <label class="ask">Did you earn income in more than one state?</label> -->
 				<div class="switch small large-2 columns">
-					<input id="x" name="switch-x" type="radio" checked>
-					<label for="x" onclick="">No</label>
+					<input id="q2" name="q2" type="radio" checked>
+					<label for="q2" onclick="">No</label>
 
-					<input id="x1" name="switch-x" type="radio">
-					<label for="x1" onclick="">Yes</label>
+					<input id="q3" name="q3" type="radio">
+					<label for="q3" onclick="">Yes</label>
 
 					<span></span>
 				</div>
@@ -117,7 +117,7 @@
 					<h5 class="subheader">In how many states did you earn income?</h5>
 					<!-- <label class="ask vertCenter" for="customDropdown1">How many homes do you own?</label> -->
 					<select class="answer" id="customDropdown1" class="large-2 columns" required>
-						<option>0</option>
+						<!-- <option>0</option> -->
 						<option>1</option>
 						<option>2</option>
 						<option>3+</option>
