--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 	<meta name="viewport" content="width=device-width">
 	<title>simplefile</title>
 
-  <link rel="stylesheet" href="css/style.css">
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="stylesheet/sass" href="css/style.scss" type="text/css">
 
   <link rel="stylesheet" href="css/foundation.css">
-  
+ 
 
   <script src="js/vendor/custom.modernizr.js"></script>
-<!--   // <script src="js/less-1.3.3.min.js" type="text/javascript"></script>
- -->
+  <script src="js/less-1.3.3.min.js" type="text/javascript"></script>
+
 </head>
 
 <body>
