--- a/signup.html
+++ b/signup.html
@@ -15,8 +15,8 @@
   
 
   <script src="js/vendor/custom.modernizr.js"></script>
-<!--   // <script src="js/less-1.3.3.min.js" type="text/javascript"></script>
- -->
+  <script src="js/less-1.3.3.min.js" type="text/javascript"></script>
+
 </head>
 
 <body>
